<resources>
    <string name="app_name">My Application</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hello">Hello.</string>
    <string name="create_account">Create account</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="user_name">USER NAME</string>
    <string name="password">Pass Word</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account">don\'t have an account</string>
    <string name="register_here">Register here</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="age">Age</string>
    <string name="gender">Gender</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone_Number</string>
    <string name="signup">Sign Up</string>
    <string name="already_have_an_account">already have an account?</string>
    <string name="login_here">Login Here</string>
    <string name="the_movie_maniac">The Movie Maniac</string>
    <string name="please_wait">Please wait...</string>
    <string name="view_all">View All</string>
    <string name="now_playing_on_movies">NOW PLAYING ON MOVIES</string>
    <string name="home">Home</string>
    <string name="no_movie_found">No Movie Found</string>
    <string name="show">show</string>
    <string name="hide">hide</string>
    <string name="valid_user_name">Valid User Name</string>
    <string name="your_first_name">Your First Name</string>
    <string name="your_last_name">Your Last Name</string>
    <string name="your_age">Age</string>
    <string name="your_gender">Your Gender</string>
    <string name="your_email">Valid Email</string>
    <string name="valid_gender_type">Valid gender type - male/female</string>
    <string name="please_signup">Please signup</string>
    <string name="top_rated_on_movies">TOP RATED ON MOVIES</string>
    <string name="try_again">Try Again</string>
    <string name="wrong_credentials">Wrong Credentials</string>
    <string-array name="gender">
        <item>Gender</item>
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string name="title_activity_main">MainActivity</string>
</resources>